# PyTestGen-LLM

./: .pre-commit-config.yaml  AGENT.md  PRD.md  README.md  TASKS.md  main.py  pyproject.toml
.github/workflows/: ci.yml
examples/: README.md  dspy_learning.py
src/pytestgen_llm/: __init__.py
src/pytestgen_llm/cli/: main.py
src/pytestgen_llm/core/: __init__.py  ensemble.py  signatures.py
src/pytestgen_llm/filters/: __init__.py  base_filter.py  pipeline.py
src/pytestgen_llm/telemetry/: __init__.py  collector.py
src/pytestgen_llm/utils/: __init__.py  coverage_utils.py  file_utils.py
tests/: __init__.py  test_project_structure.py
tests/unit/: test_signatures.py
