[project]
name = "pytestgen-llm"
version = "0.1.0"
description = "Local Unit Test Improver using DSPy and Ensemble LLM Strategies"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "Manuel Porto", email = "manuel@example.com"},
]
keywords = ["testing", "llm", "dspy", "pytest", "code-generation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers", 
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "click>=8.2.1",
    "coverage>=7.9.1",
    "dspy>=2.6.27",
    "pydantic>=2.11.7",
    "pytest>=8.4.0",
]

[project.scripts]
pytestgen-llm = "pytestgen_llm.cli.main:main"

[project.optional-dependencies]
dev = [
    "ruff",
    "ty", 
    "pre-commit",
    "rich",
    "pytest",
    "coverage",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]  # Line too long (handled by formatter)

[tool.ruff.format]
quote-style = "double"
indent-style = "space"


[tool.pytest.ini_options]
filterwarnings = [
    "ignore::pydantic.warnings.PydanticDeprecatedSince20",
    "ignore:Support for class-based.*:DeprecationWarning",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "rich>=14.0.0",
    "ruff>=0.11.13",
    "ty>=0.0.1a10",
]
